[project]
name = "agent-google"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "google-adk>=1.33.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "supabase>=2.30.0",
    "uvicorn>=0.46.0",
    "vecs>=0.4.5",
]
